# api/docs/swagger.yaml
@@ -23,12 +23,10 @@ definitions:
     properties:
       branch_id:
         type: string
-      branch_percentage:
-        type: number
       crated_at:
         type: string
       daily_limit:
-        type: integer
+        type: number
       id:
         type: string
       investor_id:
@@ -36,11 +34,11 @@ definitions:
       investor_percentage:
         type: number
       km:
-        type: integer
+        type: number
       model:
         type: string
       over_limit:
-        type: integer
+        type: number
       price:
         type: number
       state_number:
@@ -85,20 +83,18 @@ definitions:
     properties:
       branch_id:
         type: string
-      branch_percentage:
-        type: number
       daily_limit:
-        type: integer
+        type: number
       investor_id:
         type: string
       investor_percentage:
         type: number
       km:
-        type: integer
+        type: number
       model:
         type: string
       over_limit:
-        type: integer
+        type: number
       price:
         type: number
       state_number:
@@ -122,6 +118,8 @@ definitions:
     type: object
   models.CreateOrder:
     properties:
+      branch_id:
+        type: string
       car_id:
         type: string
       client_id:
@@ -140,6 +138,8 @@ definitions:
       password:
         type: string
       phone_number:
+        type: string
+      typeU:
         type: string
     type: object
   models.Debtor:
@@ -266,6 +266,8 @@ definitions:
     type: object
   models.Order:
     properties:
+      branch_id:
+        type: string
       car:
         $ref: '#/definitions/models.CarOrder'
       car_id:
@@ -302,20 +304,18 @@ definitions:
     properties:
       branch_id:
         type: string
-      branch_percentage:
-        type: number
       daily_limit:
-        type: integer
+        type: number
       investor_id:
         type: string
       investor_percentage:
         type: number
       km:
-        type: integer
+        type: number
       model:
         type: string
       over_limit:
-        type: integer
+        type: number
       price:
         type: number
       state_number:
@@ -341,6 +341,8 @@ definitions:
     type: object
   models.UpdateOrderSwag:
     properties:
+      branch_id:
+        type: string
       car_id:
         type: string
       client_id:
@@ -371,6 +373,8 @@ definitions:
       password:
         type: string
       phone_number:
+        type: string
+      typeU:
         type: string
       updated_at:
         type: string
