# models/order.go
@@ -11,6 +11,7 @@ type CreateOrder struct {
 	CarId    string `json:"car_id"`
 	ClientId string `json:"client_id"`
 	DayCount int    `json:"day_count"`
+	BranchId  string `json:"branch_id"`
 }
 
 type CarOrder struct {
@@ -24,6 +25,7 @@ type Order struct {
 	CarId          string   `json:"car_id"`
 	Car            CarOrder `json:"car"`
 	ClientId       string   `json:"client_id"`
+	BranchId  string `json:"branch_id"`
 	ClientFullName string   `json:"client_full_name"`
 	TotalPrice     float64  `json:"total_price"`
 	PaidPrice      float64  `json:"paid_price"`
@@ -39,6 +41,7 @@ type UpdateOrder struct {
 	Id         string  `json:"id"`
 	CarId      string  `json:"car_id"`
 	ClientId   string  `json:"client_id"`
+	BranchId  string `json:"branch_id"`
 	TotalPrice float64 `json:"total_price"`
 	PaidPrice  float64 `json:"paid_price"`
 	DayCount   int     `json:"day_count"`
@@ -50,6 +53,7 @@ type UpdateOrder struct {
 type UpdateOrderSwag struct {
 	Car_id  		string      `json:"car_id"`
 	Client_id   	string      `json:"client_id"`
+	BranchId  string `json:"branch_id"`
 	Paid_price      float64      `json:"paid_price"`
 }
 
@@ -66,4 +70,22 @@ type GetListOrderRequest struct {
 type GetListOrderResponse struct {
 	Count  int64    `json:"count"`
 	Orders []*Order `json:"orders"`
+}
+
+type GetListOrderInvestorResponse struct {
+	Count  int64    `json:"count"`
+	Orders []*OrderInvestor `json:"orders"`
+}
+
+type OrderInvestor struct {
+	Id             string   `json:"id"`
+	CarId          string   `json:"car_id"`
+	Car            CarOrder `json:"car"`
+	ClientId       string   `json:"client_id"`
+	ClientFullName string   `json:"client_full_name"`
+	BranchId  string `json:"branch_id"`
+	TotalPrice     float64  `json:"total_price"`
+	DayCount       float64  `json:"day_count"`
+	CreatedAt      string   `json:"created_at"`
+	UpdatedAt      string   `json:"updated_at"`
 }
